updated add and edit. Autoadded css and .js files
also added .cache to .gitignore

--- a/EasyBank/Views/Protected/AddClient.cshtml
+++ b/EasyBank/Views/Protected/AddClient.cshtml
@@ -4,12 +4,14 @@
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm("AddClient", "Protected", FormMethod.Post)) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
     <fieldset>
         <legend>Client</legend>
+        
+        @ViewBag.Message
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Name)
