--- a/EasyBank/Views/Shared/_Layout.cshtml
+++ b/EasyBank/Views/Shared/_Layout.cshtml
@@ -8,6 +8,19 @@
 </head>
 <body>
     This is page with layout
+    <div>
+        @using (Html.BeginForm("ChangeCulture", "Home"))
+        {
+            <select name="lang">
+                <option disabled selected>@Resources.Resource.ChooseLang</option>
+                <option value="uk-UA">Українська</option>
+                <option value="ru">Русский</option>
+                <option value="en">English</option>
+            </select>
+            <input type="submit" name="submit" value="@Resources.Resource.ChooseLang">
+        }
+    </div>
+
     <div id="PartialViews">
         @RenderBody()
     </div>
