adjsute language switch

--- a/EasyBank/Views/Protected/ClientsList.cshtml
+++ b/EasyBank/Views/Protected/ClientsList.cshtml
@@ -8,7 +8,7 @@
     @Html.ActionLink("Add new Client", "AddClient")
 </p>
 <table>
-
+    @ViewBag.Message
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
