--- a/EasyBank/Views/Shared/_Layout.cshtml
+++ b/EasyBank/Views/Shared/_Layout.cshtml
@@ -3,20 +3,24 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/Style.css")
+     @Styles.Render("~/Content/Style.css")
+    <script src="~/Scripts/jquery-1.8.2.js"></script>
+    <script type="text/javascript" src="~/Scripts/script.js"></script>
+    <title>@ViewBag.Title</title>    
+    
+
 </head>
 <body>
-    <div>
-        @using (Html.BeginForm("ChangeCulture", "Home"))
+    <div id="header">
+        <b>EB</b>
+        @using (Html.BeginForm("ChangeCulture", "Home", FormMethod.Post, new {name = "langForm" }))
         {
-            <select name="lang">
+            <select id="langSelect" name="lang">
                 <option disabled selected>@Resources.Resource.ChooseLang</option>
                 <option value="uk-UA">Українська</option>
                 <option value="ru">Русский</option>
                 <option value="en">English</option>
             </select>
-            <input type="submit" name="submit" value="@Resources.Resource.ChooseLang">
         }
     </div>
 
