--- a/EasyBank/Views/Protected/ClientsList.cshtml
+++ b/EasyBank/Views/Protected/ClientsList.cshtml
@@ -7,33 +7,6 @@
 <p>
     @Html.ActionLink("Add new Client", "AddClient")
 </p>
-<<<<<<< HEAD
-<table>
-    @ViewBag.Message
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Surname)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PIdNumber)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.BirthDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.RegistrationDate)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
 @using (Html.BeginForm())
 {
     <p>
@@ -46,58 +19,59 @@
 {
     <h3>Client is not found!</h3>
 }
-else { 
+else
 {
-    <table>
-        <tr>
-            <th>
-                @Html.ActionLink("Name", "ClientsList", new { sortOrder = ViewBag.NameSortParm })
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Surname)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PIdNumber)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.BirthDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Email)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RegistrationDate)
-            </th>
-            <th></th>
-        </tr>
-        @foreach (var item in Model)
     {
+        <table>
             <tr>
-                <td>
-                    @Html.ActionLink(@Html.DisplayFor(modelItem => item.Name).ToString(), "ClientsProfile", new { id = item.ClientId })
-                </td>
-                <td>
-                    @Html.ActionLink(@Html.DisplayFor(modelItem => item.Surname).ToString(), "ClientsProfile", new { id = item.ClientId })
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PIdNumber)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.BirthDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Email)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.RegistrationDate)
-                </td>
-                <td>
-                    @Html.ActionLink("Edit", "EditClient", new { id = item.ClientId }) |
-                    @Html.ActionLink("Details", "ClientsProfile", new { id = item.ClientId }) |
-                    @Html.ActionLink("Delete", "Delete", new { id = item.ClientId })
-                </td>
+                <th>
+                    @Html.ActionLink("Name", "ClientsList", new { sortOrder = ViewBag.NameSortParm })
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Surname)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.PIdNumber)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.BirthDate)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.RegistrationDate)
+                </th>
+                <th></th>
             </tr>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.ActionLink(@Html.DisplayFor(modelItem => item.Name).ToString(), "ClientsProfile", new { id = item.ClientId })
+                    </td>
+                    <td>
+                        @Html.ActionLink(@Html.DisplayFor(modelItem => item.Surname).ToString(), "ClientsProfile", new { id = item.ClientId })
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PIdNumber)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.BirthDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.RegistrationDate)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "EditClient", new { id = item.ClientId }) |
+                        @Html.ActionLink("Details", "ClientsProfile", new { id = item.ClientId }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.ClientId })
+                    </td>
+                </tr>
+            }
+        </table>
     }
-    </table>
-}
 }
