--- a/EasyBank/Views/Protected/ClientsProfile.cshtml
+++ b/EasyBank/Views/Protected/ClientsProfile.cshtml
@@ -92,12 +92,12 @@
 
 <table>
     <tr>
-        <th>Account number</th>
-        <th>Expiration Date</th>
-        <th>Amount</th>
-        <th>Currency</th>
-        <th>Type</th>
-        <th>Status</th>
+        <th>@Html.ActionLink(@Resources.Resource.AccNumb, "ClientsProfile", new { sortOrder = ViewBag.NameSortParm })</th>
+        <th>@Html.ActionLink(@Resources.Resource.ExpDate, "ClientsProfile", new { sortOrder = ViewBag.NameSortParm })</th>
+        <th>@Html.ActionLink(@Resources.Resource.Amount, "ClientsProfile", new { sortOrder = ViewBag.NameSortParm })</th>
+        <th>@Html.ActionLink(@Resources.Resource.Currency, "ClientsProfile", new { sortOrder = ViewBag.NameSortParm })</th>
+        <th>@Html.ActionLink(@Resources.Resource.Type, "ClientsProfile", new { sortOrder = ViewBag.NameSortParm })</th>
+        <th>@Html.ActionLink(@Resources.Resource.Status, "ClientsProfile", new { sortOrder = ViewBag.NameSortParm })</th>
     </tr>
     @foreach (var item in Model.Accounts) { 
         
@@ -132,7 +132,11 @@
                     @Html.DisplayFor(modelItem => item.AccountStatus.StatusName)
                 </div>
             </td>
-
+            <td>
+                @Html.ActionLink("Add money", "AddMoney", new { id = item.AccountId }) |
+                @Html.ActionLink("Transfer money", "TransferMoney", new { id = item.AccountId }) |
+                @Html.ActionLink("Edit account", "EditAccount", new { id = item.AccountId })
+            </td>
         </tr>
     }
 </table>
