--- a/EasyBank/Views/Protected/AddClient.cshtml
+++ b/EasyBank/Views/Protected/AddClient.cshtml
@@ -4,7 +4,7 @@
 <script src="~/Scripts/jquery.validate.min.js"></script>
 <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
-@using (Html.BeginForm("AddClient", "Protected", FormMethod.Post)) {
+@using (Html.BeginForm("AddClient", "Protected", FormMethod.Post, new { enctype = "multipart/form-data" })) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
@@ -52,9 +52,13 @@
             @Html.EditorFor(model => model.Email)
             @Html.ValidationMessageFor(model => model.Email)
         </div>
-
+        <label for=" file">Uplolad Passport Scan:</label>
+        <input type="file" name="file" id="file" style="width: 100%;" />
+        <br />
+                <label for=" file">Uplolad Your Photo:</label>
+        <input type="file" name="file2" id="file2" style="width: 100%;" />
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Create" class="submit" />
         </p>
     </fieldset>
 }
