--- a/EasyBank/Views/Protected/EditClient.cshtml
+++ b/EasyBank/Views/Protected/EditClient.cshtml
@@ -14,6 +14,7 @@
         @ViewBag.Message
 
         @Html.HiddenFor(model => model.ClientId)
+        @Html.HiddenFor(model => model.RegistrationDate, new { @Value = Model.RegistrationDate})
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Name)
