--- a/EasyBank/Views/Protected/EditClient.cshtml
+++ b/EasyBank/Views/Protected/EditClient.cshtml
@@ -59,6 +59,9 @@
             @Html.HiddenFor(model => model.RegistrationDate)
         </div>
 
+                <label for=" file">Uplolad Client Photo:</label>
+        <input type="file" name="file" id="file" style="width: 100%;" />
+
         <p>
             <input type="submit" value="Save" />
         </p>
