--- a/EasyBank/Views/Protected/ClientsProfile.cshtml
+++ b/EasyBank/Views/Protected/ClientsProfile.cshtml
@@ -73,6 +73,8 @@
 
 </table>
 
+@Html.Action("ShowClientPhoto")
+
 <h3>Accounts:</h3>
 <p>
     @Html.ActionLink("Add new account", "AddAccount", new { UserId = Model.ClientId })
