--- a/EasyBank/Views/Protected/ShowPassport.cshtml
+++ b/EasyBank/Views/Protected/ShowPassport.cshtml
@@ -5,3 +5,11 @@
 }
 <h2>Clients passport</h2>
 
+@{
+    var base64 = Convert.ToBase64String(Model.ImageContent);
+    var imgSrc = String.Format("data:image/jpeg;base64,{0}", base64);
+}
+<img style="width:1024px" src="@imgSrc" />
+
+<br />
+    @Html.ActionLink("Back to List", "ClientsList")
