--- a/EasyBank/Views/Protected/ClientsList.cshtml
+++ b/EasyBank/Views/Protected/ClientsList.cshtml
@@ -14,7 +14,7 @@
     <p>
         @*Enter only the Surname or identification number*@
         @Html.Label(@Resources.Resource.ClientListSearchTypeRequirement): @Html.TextBox("Search", ViewBag.CurrentFilter as string)
-        <input type="submit" value="Search" />
+        <input type="submit" value=@Resources.Resource.Search />
     </p>
 }
 @if (Model.Count() == 0)
@@ -91,6 +91,6 @@ else
     @Html.ActionLink(@Resources.Resource.BackToList, "ClientsList")
 }
 <br />
-Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+@Resources.Resource.Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) @Resources.Resource.Of @Model.PageCount
 
 @Html.PagedListPager(Model, page => Url.Action("ClientsList", new { page, sort = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
