--- a/EasyBank/Views/Protected/FileUpload.cshtml
+++ b/EasyBank/Views/Protected/FileUpload.cshtml
@@ -1,8 +1,8 @@
 ﻿
 {
-    <label for=" file">Uplolad Image:</label>
+    <label for=" file">@Resources.Resource.UploadImage:</label>
     <input type="file" name="file" id="file" style="width: 100%;" />
-    @Html.ActionLink("FileUpload", "Protected", FormMethod.Post, new { enctype = "multipart/form-data" })
+    @Html.ActionLink(@Resources.Resource.FileUpload, "Protected", FormMethod.Post, new { enctype = "multipart/form-data" })
        @* <input type="submit" value="Upload" class="submit" />*@
 
 }
