--- a/EasyBank/Views/Protected/verifyDelete.cshtml
+++ b/EasyBank/Views/Protected/verifyDelete.cshtml
@@ -6,9 +6,9 @@
 
 <h2>CurrDelete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>@Resources.Resource.AskToDeleteCurrency</h3>
 <fieldset>
-    <legend>Currency</legend>
+    <legend>@Resources.Resource.Currency</legend>
 
     <div class="display-label">
         @Html.DisplayNameFor(model => model.CurrencyName)
@@ -22,6 +22,6 @@
     <p>
         @Html.Hidden("id", Model.CurrencyId)
         <input type="submit" value="Delete" />
-        @Html.ActionLink("Back to List", "CurrencyList")
+        @Html.ActionLink(@Resources.Resource.BackToList, "CurrencyList")
     </p>
 }
