Add photo fixed

--- a/EasyBank/Views/Protected/ClientsProfile.cshtml
+++ b/EasyBank/Views/Protected/ClientsProfile.cshtml
@@ -73,7 +73,7 @@
 
 </table>
 
-@Html.Action("ShowClientPhoto")
+@Html.Action("ShowClientPhoto", new { id = Model.ClientId })
 
 <p>
     @Html.ActionLink(@Resources.Resource.AddAccount, "AddAccount", new { clientId = Model.ClientId })
