Fixed some bugs

--- a/EasyBank/Views/Protected/AddClient.cshtml
+++ b/EasyBank/Views/Protected/AddClient.cshtml
@@ -10,7 +10,7 @@
     @Html.ValidationSummary(true)
 
     <fieldset>
-        <legend>@Resources.Resource.Client++++++++++</legend>
+        <legend>@Resources.Resource.Client</legend>
         
         @ViewBag.Message
 
