--- a/EasyBank/Views/Protected/AddAccount.cshtml
+++ b/EasyBank/Views/Protected/AddAccount.cshtml
@@ -40,7 +40,7 @@
 
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="@Resources.Resource.Create"  />
         </p>
     </fieldset>
 }
